<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_nav_bar"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/purple_bg"
                    android:orientation="vertical"
                    android:padding="14dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/background_app_color"
                        android:fontFamily="@font/graphik_bold"
                        android:text="@string/Main_title"
                        android:textColor="@color/white"
                        android:textSize="26sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/background_app_color"
                        android:fontFamily="@font/graphik_medium"
                        android:text="@string/are_you_feeling_sick"
                        android:textColor="@color/white"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@color/background_app_color"
                        android:fontFamily="@font/graphik_thin"
                        android:lineSpacingExtra="5dp"
                        android:text="@string/feel_sick"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <GridLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:alignmentMode="alignMargins"
                        android:columnCount="2"
                        android:rowCount="1">

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_call"
                            android:drawableStart="@drawable/baseline_call_now"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="Call Now"
                            android:textAlignment="center"
                            android:onClick="callNow"
                            android:textColor="@color/white" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="wrap_content"
                            android:layout_rowWeight="1"
                            android:layout_columnWeight="1"
                            android:layout_margin="10dp"
                            android:background="@drawable/button_emergency"
                            android:drawableStart="@drawable/baseline_warning_white_24dp"
                            android:gravity="center"
                            android:padding="15dp"
                            android:text="Emergency"
                            android:onClick="call_emergency"
                            android:textAlignment="center"
                            android:textColor="@color/white" />

                    </GridLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/graphik_bold"
                    android:text="@string/faq"
                    android:textColor="@color/prevention"
                    android:textSize="20sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnCount="1"
                    android:rowCount="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="16dp"
                        android:onClick="open_faq_web"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_faqs" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/graphik_bold"
                                    android:lineSpacingExtra="5dp"
                                    android:text="@string/faq_title"
                                    android:textColor="@color/prevention"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/graphik_thin"
                                    android:lineSpacingExtra="5dp"
                                    android:text="@string/faq_description"
                                    android:textColor="@color/prevention"
                                    android:textSize="18sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/graphik_bold"
                    android:text="@string/prevention"
                    android:textColor="@color/prevention"
                    android:textSize="20sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:alignmentMode="alignMargins"
                    android:columnCount="1"
                    android:rowCount="2">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:layout_margin="16dp"
                        android:onClick="open_advice"
                        app:cardCornerRadius="10dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/bg_test"
                            android:orientation="horizontal">

                            <androidx.appcompat.widget.AppCompatImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_own_test" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/graphik_bold"
                                    android:lineSpacingExtra="5dp"
                                    android:text="@string/Protect"
                                    android:textColor="@color/prevention"
                                    android:textSize="18sp" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginBottom="5dp"
                                    android:fontFamily="@font/graphik_thin"
                                    android:lineSpacingExtra="5dp"
                                    android:text="@string/see_how"
                                    android:textColor="@color/prevention"
                                    android:textSize="18sp" />
                            </LinearLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cnb_menuResource="@menu/menu_nav_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        app:cnb_radius="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_rounded"
        android:id="@+id/bottom_nav_bar"/>
</RelativeLayout>