<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/purple_bg_notrounded"
    tools:context=".advices">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_above="@+id/bottom_nav_bar" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:paddingTop="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/background_app_color"
                android:fontFamily="@font/graphik_bold"
                android:text="@string/Main_title"
                android:textColor="@color/white"
                android:textSize="26sp" />
            <TextView
                android:paddingTop="14dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/background_app_color"
                android:fontFamily="@font/graphik_medium"
                android:text="@string/prevention"
                android:textColor="@color/white"
                android:textSize="22sp" />
                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:rowCount="7"
                    android:columnCount="1"
                    android:background="@drawable/purple_bg"
                    android:alignmentMode="alignMargins"
                    android:layout_margin="20dp">
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_wear_mask"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/wear_mask"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_wash_hands"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/wash_hands"
                                android:layout_marginTop="10dp"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_social_distancing"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/social_distancing"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_dont_touch_face"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/dont_touch"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_cleaning"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/cleaning"
                                android:layout_marginTop="10dp"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_stay_home"
                                android:layout_gravity="center" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:text="@string/stay_home"
                                android:layout_marginTop="10dp"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardCornerRadius="20dp"
                        android:layout_margin="15dp"
                        android:layout_rowWeight="1"
                        android:layout_columnWeight="1"
                        android:elevation="8dp"
                        android:gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:background="@drawable/bg_card_advices"
                            android:orientation="vertical">
                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/ic_emergency"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAlignment="center"
                                android:layout_marginTop="10dp"
                                android:text="@string/emergency"
                                android:textSize="18sp"
                                android:textColor="@color/prevention"
                                android:fontFamily="@font/graphik_medium"/>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>
                </GridLayout>
        </LinearLayout>
    </ScrollView>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cnb_menuResource="@menu/menu_nav_bar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:padding="8dp"
        app:cnb_radius="10dp"
        android:elevation="10dp"
        android:background="@drawable/white_rounded"
        android:id="@+id/bottom_nav_bar"/>
</RelativeLayout>